--- a/css/style.css
+++ b/css/style.css
@@ -1,245 +1,252 @@
 * {
-  border: none;
-  margin: 0px;
-  outline: none;
-  padding: 0px;
+    border: none;
+    margin: 0px;
+    outline: none;
+    padding: 0px;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 a:hover {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 html {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: large;
-  margin: 0 auto;
-  max-width: 940px;
-  padding: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+        'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: large;
+    margin: 0 auto;
+    max-width: 940px;
+    padding: 20px;
 }
 
 body {
-  background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.1);
 }
 
 header {
-  align-items: baseline;
-  display: flex;
-  gap: 5px;
-  justify-content: space-between;
+    align-items: baseline;
+    display: flex;
+    gap: 5px;
+    justify-content: space-between;
 }
 
 header .name :first-child {
-  font-weight: 700;
+    font-weight: 700;
 }
 
 header .updated {
-  font-size: 0.9rem;
+    font-size: 0.9rem;
 }
 
 header .download {
-  position: absolute;
-  margin-top: 10px;
+    position: absolute;
+    margin-top: 10px;
 }
 
 header .download a {
-  background-color: #000;
-  border-radius: 15px;
-  color: rgba(255, 255, 255, 0.8975);
-  font-weight: 700;
-  padding: 5px 15px;
+    background-color: #000;
+    border-radius: 15px;
+    color: rgba(255, 255, 255, 0.8975);
+    font-weight: 700;
+    padding: 5px 15px;
+}
+
+header .available {
+    display: none;
 }
 
 .briefly {
-  margin-top: 8px;
+    margin-top: 8px;
 }
 
 .briefly span.type {
-  font-weight: 400;
-}
-
-.mil {
-  margin-top: 20px;
-}
-
-.mil__details > summary {
-  cursor: pointer;
-}
-
-.mil__print {
-  display: none;
+    font-weight: 400;
 }
 
 .heading {
-  font-weight: 700;
-  margin-top: 20px;
+    font-weight: 700;
+    margin-top: 20px;
 }
 
 .project {
-  display: flex;
-  font-size: 0.9rem;
-  margin-top: 10px;
-  padding: 10px 0;
-  text-align: justify;
+    display: flex;
+    font-size: 0.9rem;
+    margin-top: 10px;
+    padding: 10px 0;
+    text-align: justify;
 }
 
 .project::before {
-  background-color: #000;
-  padding: 1.5px;
-  border-radius: 5px;
-  margin-right: 2%;
-  content: '';
+    background-color: #000;
+    padding: 1.5px;
+    border-radius: 5px;
+    margin-right: 2%;
+    content: '';
 }
 
 .project .timeline {
-  flex: 1 0 20%;
+    flex: 1 0 20%;
 }
 
 .project > :last-child {
-  flex: 1 0 75%;
+    flex: 1 0 75%;
 }
 
 .project .title {
-  font-weight: 700;
+    font-weight: 700;
 }
 
 .project__heading {
-  font-weight: 500;
-  margin-top: 15px;
+    font-weight: 500;
+    margin-top: 15px;
+}
+
+.older-projects {
+    margin-top: 5px;
+}
+
+.older-projects summary {
+    cursor: pointer;
+}
+
+.pets {
+    margin-top: 8px;
 }
 
 .skills {
-  margin-top: 20px;
+    margin-top: 20px;
 }
 
 @media (max-width: 1024px) {
-  html {
-    font-size: medium;
-  }
+    html {
+        font-size: medium;
+    }
 }
 
 @media (max-width: 768px) {
-  html {
-    font-size: small;
-  }
-  header .download {
-    margin-top: 5px;
-  }
-  header .download a {
-    border-radius: 10px;
-    padding: 3px 8px;
-  }
-  .heading {
-    margin-top: 10px;
-  }
-  .mil {
-    margin-top: 10px;
-  }
-  .project {
-    gap: 5px;
-    margin-top: 5px;
-  }
-  .project::before {
-    margin-right: 5px;
-  }
-  .skills {
-    margin-top: 10px;
-  }
+    html {
+        font-size: small;
+    }
+    header .download {
+        margin-top: 5px;
+    }
+    header .download a {
+        border-radius: 10px;
+        padding: 3px 8px;
+    }
+    .heading {
+        margin-top: 10px;
+    }
+    .project {
+        gap: 5px;
+        margin-top: 5px;
+    }
+    .project::before {
+        margin-right: 5px;
+    }
+    .skills {
+        margin-top: 10px;
+    }
 }
 
 @media (max-width: 600px) {
-  html {
-    padding: 10px;
-  }
-  header .name :not(:first-child) {
-    font-size: 0.8rem;
-  }
-  header .updated {
-    font-size: 0.8rem;
-  }
-  header .download a {
-    border-radius: 8px;
-    font-size: 0.8rem;
-    padding: 2px 8px;
-  }
-  .briefly {
-    font-size: 0.9rem;
-  }
-  .briefly p {
-    margin: 0;
-  }
-  .project .timeline {
-    flex: 1 0 23%;
-  }
-  .project > :last-child {
-    flex: 1 0 70%;
-  }
+    html {
+        padding: 10px;
+    }
+    header .name :not(:first-child) {
+        font-size: 0.8rem;
+    }
+    header .updated {
+        font-size: 0.8rem;
+    }
+    header .download a {
+        border-radius: 8px;
+        font-size: 0.8rem;
+        padding: 2px 8px;
+    }
+    .briefly {
+        font-size: 0.9rem;
+    }
+    .briefly p {
+        margin: 0;
+    }
+    .project .timeline {
+        flex: 1 0 23%;
+    }
+    .project > :last-child {
+        flex: 1 0 70%;
+    }
 }
 
 @media (max-width: 480px) {
-  html {
-    font-size: x-small;
-  }
-  .project__heading {
-    margin: 0;
-  }
-  .project::before {
-    padding: 1px;
-    margin-right: 2px;
-  }
-  .project {
-    gap: 0;
-  }
-  .pets,
-  .skills {
-    font-size: 0.9rem;
-  }
+    html {
+        font-size: x-small;
+    }
+    .project__heading {
+        margin: 0;
+    }
+    .project::before {
+        padding: 1px;
+        margin-right: 2px;
+    }
+    .project {
+        gap: 0;
+    }
+    .pets,
+    .skills {
+        font-size: 0.9rem;
+    }
 }
 
-@media (max-width: 350px) {
-  html {
-    font-size: xx-small;
-  }
+@media (max-width: 375px) {
+    html {
+        font-size: xx-small;
+    }
 }
 
 @media (max-width: 320px) {
-  html {
-    padding: 5px;
-  }
-  .project .timeline {
-    font-size: 0.8rem;
-  }
+    html {
+        padding: 5px;
+    }
+    .project .timeline {
+        font-size: 0.8rem;
+    }
 }
 
 @media print {
-  .mil {
-    display: none;
-  }
-  .mil__print {
-    display: inherit;
-  }
-  .briefly {
-    font-size: 0.9rem;
-    margin-top: 10px;
-  }
-  .briefly p {
-    margin: 0;
-  }
-  .download {
-    display: none;
-  }
-  .project__heading {
-    margin: 0;
-  }
-  .project .timeline {
-    flex: 1 0 17%;
-  }
-  .project > :last-child {
-    flex: 1 0 78%;
-  }
+    .briefly {
+        font-size: 0.9rem;
+        margin-top: 10px;
+    }
+    .briefly p {
+        margin: 0;
+    }
+    header .download {
+        display: none;
+    }
+    header .available {
+        display: block;
+        border-radius: 8px;
+        border: 1px #000 solid;
+        padding: 4px;
+        position: absolute;
+        margin-top: 10px;
+        right: 10px;
+    }
+    .project__heading {
+        margin: 0;
+    }
+    .project .timeline {
+        flex: 1 0 17%;
+    }
+    .project > :last-child {
+        flex: 1 0 78%;
+    }
+    .older-projects {
+        display: none;
+    }
 }
