--- a/css/style.css
+++ b/css/style.css
@@ -44,15 +44,25 @@ header .updated {
 
 header .download {
     position: absolute;
-    margin-top: 10px;
+    margin-top: 15px;
 }
 
-header .download a {
+header .download a.pdf {
     background-color: #000;
     border-radius: 15px;
     color: rgba(255, 255, 255, 0.8975);
     font-weight: 700;
     padding: 5px 15px;
+}
+
+header .download a.lang {
+    background-color: rgba(255, 255, 255, 0.8975);
+    border-radius: 15px;
+    display: block;
+    font-weight: 700;
+    margin-top: 12px;
+    padding: 5px 15px;
+    width: fit-content;
 }
 
 header .available {
