--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,41 @@ header .available {
     font-weight: 400;
 }
 
+.why {
+    -webkit-animation: grad 30s ease infinite;
+    -moz-animation: grad 30s ease infinite;
+    animation: grad 30s ease infinite;
+    background: linear-gradient(270deg, rgba(255, 215, 0, 0.1), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1));
+    background-size: 400% 400%;
+    min-width: fit-content;
+    max-width: 70%;
+    margin-top: 10px;
+    padding: 4px 8px;
+
+    display: none;
+}
+
+.why h1 {
+    color: #ffd700;
+    text-shadow: 0 0 4px black;
+}
+
+.why ul {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 4px 8px;
+    justify-content: center;
+}
+
+.why li {
+    background-color: #ffd700;
+    border: solid 1px rgba(0, 0, 0, 0.1);
+    border-radius: 8vh;
+    display: inline;
+    padding: 2px 10px;
+}
+
 .heading {
     font-weight: 700;
     margin-top: 20px;
@@ -124,7 +159,7 @@ header .available {
 }
 
 .pets {
-    margin-top: 8px;
+    margin-top: 20px;
 }
 
 .skills {
@@ -184,6 +219,9 @@ header .available {
     .briefly p {
         margin: 0;
     }
+    .why {
+        max-width: 100%;
+    }
     .project .timeline {
         flex: 1 0 23%;
     }
@@ -195,6 +233,9 @@ header .available {
 @media (max-width: 480px) {
     html {
         font-size: x-small;
+    }
+    header .download a.lang {
+        margin-top: 8px;
     }
     .project__heading {
         margin: 0;
@@ -247,6 +288,9 @@ header .available {
         margin-top: 10px;
         right: 10px;
     }
+    .project {
+        margin-top: 0;
+    }
     .project__heading {
         margin: 0;
     }
@@ -258,5 +302,39 @@ header .available {
     }
     .older-projects {
         display: none;
+    }
+}
+
+@-webkit-keyframes grad {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+@-moz-keyframes grad {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+@keyframes grad {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
     }
 }
